cambios transacciones designs

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -5,13 +5,13 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding>
+<ion-content padding class="BackGR3">
   <ion-row>
     <ion-col col-12>
       <button ion-button (click)="cerrarSesion()" block class="buttonPayCash">Cerrar sesión</button>
     </ion-col>
   </ion-row>
-  <ion-card>
+  <ion-card style="background: transparent">
     <ion-card-header>
         <ion-img style="background: transparent" width="15" height="15" src="assets/icon/Account.png"></ion-img>
       <!-- <ion-icon name="person" item-start></ion-icon> -->
