--- a/src/pages/modal-transaction/modal-transaction.html
+++ b/src/pages/modal-transaction/modal-transaction.html
@@ -3,7 +3,7 @@
     <ion-title>Solicitar transacción</ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding>
+<ion-content padding class="BackGR3">
   <ion-card>
     <ion-card-header>
       {{moneda.full_name}}
