--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -40,13 +40,13 @@
           <ion-input type="{{type}}" name="contrasena"
                      formControlName="password">
           </ion-input>
-          <!--<button *ngIf="!showPass" ion-button clear color="dark" type="button" required item-right-->
-                  <!--(click)="showPassword()">-->
-            <!--<ion-icon name="ios-eye-off-outline"></ion-icon>-->
-          <!--</button>-->
-          <!--<button *ngIf="showPass" ion-button clear color="dark" type="button" item-right (click)="showPassword()">-->
-            <!--<ion-icon name="ios-eye-outline"></ion-icon>-->
-          <!--</button>-->
+          <button *ngIf="!showPass" class="btn_show" ion-button clear color="dark" type="button" required item-right
+                  (click)="showPassword()">
+            <ion-icon name="ios-eye-off-outline"></ion-icon>
+          </button>
+          <button *ngIf="showPass" class="btn_show" ion-button clear color="dark" type="button" item-right (click)="showPassword()">
+            <ion-icon name="ios-eye-outline"></ion-icon>
+          </button>
         </ion-item>
 
         <ion-item class="marginlists">
@@ -54,13 +54,13 @@
           <ion-input type="{{type2}}" name="confirmacontrasena"
                      formControlName="password_conf">
           </ion-input>
-          <!--<button *ngIf="!showPass2" ion-button clear color="dark" type="button" required item-right-->
-                  <!--(click)="showPassword2()">-->
-            <!--<ion-icon name="ios-eye-off-outline"></ion-icon>-->
-          <!--</button>-->
-          <!--<button *ngIf="showPass2" ion-button clear color="dark" type="button" item-right (click)="showPassword2()">-->
-            <!--<ion-icon name="ios-eye-outline"></ion-icon>-->
-          <!--</button>-->
+          <button *ngIf="!showPass2" class="btn_show2" ion-button clear color="dark" type="button" required item-right
+                  (click)="showPassword2()">
+            <ion-icon name="ios-eye-off-outline"></ion-icon>
+          </button>
+          <button *ngIf="showPass2" class="btn_show2" ion-button clear color="dark" type="button" item-right (click)="showPassword2()">
+            <ion-icon name="ios-eye-outline"></ion-icon>
+          </button>
         </ion-item>
 
 
