Change error messages to modal form

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -8,12 +8,12 @@
         <ion-item class="marginlists">
           <ion-label stacked>Nombres</ion-label>
           <ion-input type="text" required name="userregistronombre" formControlName="first_name"
-                     [brmasker]="{len:20}"></ion-input>
+                     ></ion-input>
         </ion-item>
 
         <ion-item class="marginlists">
           <ion-label stacked>Apellidos</ion-label>
-          <ion-input type="text" required name="userregistroapellido" formControlName="last_name" [brmasker]="{len:20}"></ion-input>
+          <ion-input type="text" required name="userregistroapellido" formControlName="last_name" ></ion-input>
         </ion-item>
 
         <ion-item class="marginlists">
