--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
     </ion-col>
   </ion-row>
   <ion-item class="center">
-    <button ion-button block outline (click)="goPage('contact')">{{'PRUEBA_EYEPAYCASH'|translate}}</button>
+    <button ion-button (click)="goPage('contact')"class="buttonPayCash" >{{'PRUEBA_EYEPAYCASH'|translate}}</button>
   </ion-item>
 </ion-content>
 <ion-footer>
