--- a/src/pages/modal-welcome/modal-welcome.html
+++ b/src/pages/modal-welcome/modal-welcome.html
@@ -17,6 +17,5 @@
       </ion-buttons>
     </ion-col>
   </ion-row>
-
-  <img src="assets/imgs/ok.png">
+  <img src="assets/ok.png">
 </ion-content>
