--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,15 +9,24 @@
     </ion-col> -->
 
   </ion-row>
-  <ion-row>
-    <ion-col class="center mrg40Top">
-      <img class="imgLogoAmin floating" src="assets/imgs/Animacion2.png">
-      <img class="imgLogo" src="assets/imgs/Animacion1.png">
-    </ion-col>
-  </ion-row>
-  <ion-item class="center">
-    <button ion-button (click)="goPage('contact')"class="buttonPayCash" >{{'PRUEBA_EYEPAYCASH'|translate}}</button>
-  </ion-item>
+
+  <div class="marg5">
+    <ion-row>
+      <ion-col class="center bounceInLeft">
+        <img class="icoAnim2 animated animated2 bounceOutRight" src="assets/imgs/Billete2.png">
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="center mrg40Top bounceInLeft">
+        <img class="imgLogoAmin  animated animated2 ≈ bounceInLeft" src="assets/imgs/Billete.png">
+        <img class="imgLogo " src="assets/imgs/Mascota.png">
+      </ion-col>
+    </ion-row>
+    <ion-item class="center">
+      <button ion-button (click)="goPage('contact')" class="buttonPayCash">{{'PRUEBA_EYEPAYCASH'|translate}}</button>
+    </ion-item>
+
+  </div>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
