--- a/src/pages/language/language.html
+++ b/src/pages/language/language.html
@@ -1,12 +1,13 @@
-
-
-
 <ion-content class="img_background">
-  <ion-list style="
-    text-align: center;
-    position: absolute;
-    top: 10%;">
-    <img src="assets/imgs/colombia.png" alt="" (click)="seleccionar('es')">
-    <img src="assets/imgs/usa.png" alt="" (click)="seleccionar('en')">
+  <ion-list>
+    <div class="center mrgTop">
+      <ion-item class="center">
+        <button ion-button  (click)="seleccionar('es')" class="buttonPayCash">Español</button>
+      </ion-item>
+
+      <ion-item class="center">
+        <button ion-button  (click)="seleccionar('en')" class="buttonPayCash">English</button>
+      </ion-item>
+    </div>
   </ion-list>
 </ion-content>
