--- a/src/pages/language/language.html
+++ b/src/pages/language/language.html
@@ -1,12 +1,23 @@
 
 
 
-<ion-content class="img_background">
+<ion-content class="img_background" style="text-align: center">
   <ion-list style="
     text-align: center;
     position: absolute;
-    top: 10%;">
-    <img src="assets/imgs/colombia.png" alt="" (click)="seleccionar('es')">
-    <img src="assets/imgs/usa.png" alt="" (click)="seleccionar('en')">
+    top: 25%;
+    left: 23%;
+    right: 23%;
+">
+    <ion-row>
+      <ion-col col-12>
+        <img src="assets/imgs/colombia.png" style="max-width: 60%" alt="" (click)="seleccionar('es')">
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-12>
+        <img src="assets/imgs/usa.png" style="max-width: 60%" alt="" (click)="seleccionar('en')">
+      </ion-col>
+    </ion-row>
   </ion-list>
 </ion-content>
