--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,7 +25,7 @@
       </ion-item>
     </ion-list>
   </form>
-  <ion-item>
+  <ion-item style="margin-top: -10%;">
     <ion-col col-6>
       <button class="textWhite" ion-button (click)="registro()" clear block class="transparente">{{'REGISTRARME'|translate}}</button>
     </ion-col>
