Fixed password recovery and update password (FormGoups)

--- a/src/pages/password-update/password-update.html
+++ b/src/pages/password-update/password-update.html
@@ -5,16 +5,21 @@
   Ionic pages and navigation.
 -->
 <ion-content padding class="fondo_gris">
-  <form #formulario (submit)="recovery()">
+  <form [formGroup]="formGroup"  (ngSubmit)="recovery()">
     <ion-list>
+
       <ion-item>
         <ion-label stacked>Ingrese la nueva contraseña</ion-label>
-        <ion-input type="password" [(ngModel)]="infoRecovery.new_password" name="recovery_pass"></ion-input>
+        <ion-input type="password" required  name="recovery_pass" formControlName="new_password"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label stacked>Confirme la nueva contraseña</ion-label>
-        <ion-input type="password" [(ngModel)]="infoRecovery.new_password_conf" name="recovery_pass2"></ion-input>
-      </ion-item>
+        <ion-input type="password" required name="recovery_pass2" formControlName="new_password_conf"></ion-input>
+	  </ion-item>
+	  <ion-item no-lines *ngIf="formGroup.invalid">
+			<msg-error [control]="formGroup.controls.new_password" name="Recovery"></msg-error>
+			<msg-error [control]="formGroup.controls.new_password_conf" name="Recovery2"></msg-error>
+		</ion-item>
       <ion-item>
         <button ion-button class="buttonPayCash" block>Guardar</button>
       </ion-item>
