--- a/src/pages/recovery-password/recovery-password.html
+++ b/src/pages/recovery-password/recovery-password.html
@@ -1,61 +1,64 @@
 <ion-content padding class="back vignette">
-  <div style="margin-top:12%" class="center">
-    <ion-img class="logo" src="assets/imgs/EPCLogo.png"></ion-img>
-  </div>
+	<div style="margin-top:12%" class="center">
+		<ion-img class="logo" src="assets/imgs/EPCLogo.png"></ion-img>
+	</div>
 
-  <div *ngIf="isvisible">
-    <ion-item>
-      <ion-label stacked>Ingrese número celular</ion-label>
-      <ion-input type="text" [(ngModel)]="data" name="userdata"></ion-input>
-    </ion-item>
-    <ion-item *ngIf="iscodigo">
-      <ion-label stacked>Ingrese código de verificación</ion-label>
-      <ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
-    </ion-item>
-    <ion-row class="divMargin">
-      <ion-col col-12 *ngIf="!iscodigo">
-        <button ion-button (click)="sendMessage('phone')" block class="buttonPayCash">Enviar mensaje</button>
-      </ion-col>
-      <ion-col col-12 *ngIf="iscodigo">
-        <button ion-button (click)="confirmCode()" block class="buttonPayCash">Confirmar código</button>
-      </ion-col>
-    </ion-row>
-    <ion-row class="marginLft divMargin20">
-      <ion-col col-4>
-        <button ion-button (click)="cancelar()" class="buttonPayCash">Cancelar</button>
-      </ion-col>
-      <ion-col col-6 *ngIf="!iscodigo">
-        <button ion-button (click)="changeVisible()" class="buttonPayCash">Recuperar por email</button>
-      </ion-col>
-    </ion-row>
-  </div>
+	<div *ngIf="isvisible">
+		<ion-item>
+			<ion-label stacked>Ingrese número celular</ion-label>
+			<ion-input type="text" [(ngModel)]="data" name="userdata"></ion-input>
+		</ion-item>
+		<ion-item *ngIf="iscodigo2">
+			<ion-label stacked>Ingrese código de verificación</ion-label>
+			<ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
+		</ion-item>
+		<ion-row class="divMargin">
+			<ion-col col-12 *ngIf="!iscodigo2">
+				<button ion-button (click)="sendMessage('phone')" block class="buttonPayCash">Enviar mensaje</button>
+			</ion-col>
+			<ion-col col-12 *ngIf="iscodigo2">
+				<button ion-button (click)="confirmCode()" block class="buttonPayCash">Confirmar código</button>
+			</ion-col>
+		</ion-row>
+		<ion-row class="marginLft divMargin20">
+			<ion-col col-4>
+				<button ion-button (click)="cancelar()" class="buttonPayCash">Cancelar</button>
+			</ion-col>
+			<ion-col col-6 *ngIf="!iscodigo2">
+				<button ion-button (click)="changeVisible()" class="buttonPayCash">Recuperar por email</button>
+			</ion-col>
+		</ion-row>
+	</div>
 
-  <div *ngIf="!isvisible">
-    <ion-item>
-      <ion-label stacked>Ingrese su email</ion-label>
-      <ion-input type="text" [(ngModel)]="data" name="dataname"></ion-input>
-    </ion-item>
-
-
-    <ion-item *ngIf="iscodigo">
-      <ion-label stacked>Ingrese código de verificación</ion-label>
-      <ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
-    </ion-item>
-    <ion-row class="divMargin">
-      <ion-col col-12 *ngIf="!iscodigo">
-        <button ion-button (click)="sendMessage('mail')" block class="buttonPayCash">Enviar email</button>
-      </ion-col>
-      <ion-col col-12 *ngIf="iscodigo">
-        <button ion-button (click)="confirmCode()" block class="buttonPayCash">Confirmar código</button>
-      </ion-col>
-    </ion-row>
-    <ion-row class="marginLft divMargin">
-      <ion-col col-4>
-        <button ion-button (click)="cancelar()" class="buttonPayCash">Cancelar</button>
-      </ion-col>
-      <ion-col col-6>
-        <button ion-button (click)="changeVisible()" class="buttonPayCash">Recuperar por SMS</button>
-      </ion-col>
-    </ion-row>
-  </div>
+	<div *ngIf="!isvisible">
+			<div [formGroup]="formGroup">
+		<ion-item>
+			<ion-label stacked>Ingrese su email</ion-label>
+			<ion-input type="text"  name="dataname" required formControlName="data"></ion-input>		
+		</ion-item>
+		<ion-item no-lines *ngIf="formGroup.invalid">
+				<msg-error [control]="formGroup.controls.data"></msg-error>
+		</ion-item>
+	</div>
+		<ion-item *ngIf="iscodigo">
+			<ion-label stacked>Ingrese código de verificación</ion-label>
+			<ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
+		</ion-item>
+		<ion-row class="divMargin">
+			<ion-col col-12 *ngIf="!iscodigo">
+				<button ion-button (click)="sendMessage('mail')" block class="buttonPayCash">Enviar email</button>
+			</ion-col>
+			<ion-col col-12 *ngIf="iscodigo">
+				<button ion-button (click)="confirmCode()" block class="buttonPayCash">Confirmar código</button>
+			</ion-col>
+		</ion-row>
+		<ion-row class="marginLft divMargin">
+			<ion-col col-4>
+				<button ion-button (click)="cancelar()" class="buttonPayCash">Cancelar</button>
+			</ion-col>
+			<ion-col col-6>
+				<button ion-button (click)="changeVisible()" class="buttonPayCash">Recuperar por SMS</button>
+			</ion-col>
+		</ion-row>
+	</div>
 </ion-content>
