--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,12 +25,12 @@
       </ion-item>
     </ion-list>
   </form>
-  <ion-item>
-    <ion-col col-6>
+  <ion-row>
+    <ion-col col-12>
       <button class="textWhite" ion-button (click)="registro()" clear block class="transparente">{{'REGISTRARME'|translate}}</button>
     </ion-col>
-    <ion-col col-6>
+    <ion-col col-12>
       <button ion-button (click)="recuperarcontrasena()" clear block class="transparente">{{'RECUPERAR_CONTRASENA'|translate}}</button>
     </ion-col>
-  </ion-item>
+  </ion-row>
 </ion-content>
