Add mi account page buttons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,7 +44,7 @@
         <img width="25" height="25" src="assets/icon/3.png">
         <p>{{'MAPA'|translate}}</p>
       </ion-col>
-      <ion-col class="center" col-3 (click)="goPage('account')">
+      <ion-col class="center" col-3 (click)="goPage('profile')">
         <img width="25" height="25" src="assets/icon/4.png">
         <p>{{'CUENTA'|translate}}</p>
       </ion-col>
