--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,92 +1,84 @@
 <ion-content class="imgBackground vignette">
-  <div style="margin-top:12%" class="center">
-    <ion-img class="logo" src="assets/imgs/EPCLogo.png"></ion-img>
-  </div>
-  <div class="center">
-    <form [formGroup]="formGroup" (ngSubmit)="register()">
-      <ion-list>
-        <ion-item class="marginlists">
-          <ion-label stacked>Nombres</ion-label>
-          <ion-input type="text" required name="userregistronombre" formControlName="first_name"
-                     ></ion-input>
-        </ion-item>
+	<div style="margin-top:12%" class="center">
+		<ion-img class="logo" src="assets/imgs/EPCLogo.png"></ion-img>
+	</div>
+	<div class="center">
+		<form [formGroup]="formGroup" (ngSubmit)="register()">
+			<ion-list>
+				<ion-item class="marginlists">
+					<ion-label stacked>Nombres</ion-label>
+					<ion-input type="text" required name="userregistronombre" formControlName="first_name"></ion-input>
+				</ion-item>
+				<ion-item no-lines *ngIf="formGroup.invalid">
+					<msg-error [control]="formGroup.controls.first_name" name="Nombres"></msg-error>
+				</ion-item>
+				<ion-item class="marginlists">
+					<ion-label stacked>Apellidos</ion-label>
+					<ion-input type="text" required name="userregistroapellido" formControlName="last_name">
+					</ion-input>
+				</ion-item>
+				<ion-item no-lines *ngIf="formGroup.invalid">
+					<msg-error [control]="formGroup.controls.last_name" name="Apellidos"></msg-error>
+				</ion-item>
+				<ion-item class="marginlists">
+					<ion-label stacked>Género</ion-label>
+					<ion-select okText="Guardar" cancelText="Cancelar" formControlName="gender" name="userregistrogenero" interface="popover">
+						<ion-option value="f">Femenino</ion-option>
+						<ion-option value="m">Masculino</ion-option>
+					</ion-select>
+				</ion-item>
+				<ion-item class="marginlists">
+					<ion-label stacked>Email</ion-label>
+					<ion-input type="email" required name="userregistroemail" formControlName="mail"></ion-input>
+				</ion-item>
+				<ion-item no-lines *ngIf="formGroup.invalid">
+					<msg-error [control]="formGroup.controls.mail" name="Email"></msg-error>
+				</ion-item>
+				<ion-item class="marginlists">
+					<ion-label stacked>Confirmar email</ion-label>
+					<ion-input type="email" required name="confirmacionmail" formControlName="mail_conf"></ion-input>
+				</ion-item>
+				<ion-item>
+					<ion-label stacked>Contraseña</ion-label>
+					<ion-input type="{{type}}" name="contrasena" formControlName="password">
+					</ion-input>
+					<button *ngIf="!showPass" class="btn_show" ion-button clear color="dark" type="button" required item-right (click)="showPassword()">
+						<ion-icon name="ios-eye-off-outline"></ion-icon>
+					</button>
+					<button *ngIf="showPass" class="btn_show" ion-button clear color="dark" type="button" item-right (click)="showPassword()">
+						<ion-icon name="ios-eye-outline"></ion-icon>
+					</button>
+				</ion-item>
 
-        <ion-item class="marginlists">
-          <ion-label stacked>Apellidos</ion-label>
-          <ion-input type="text" required name="userregistroapellido" formControlName="last_name" ></ion-input>
-        </ion-item>
+				<ion-item no-lines *ngIf="formGroup.invalid">
+					<msg-error [control]="formGroup.controls.password" name="Contraseña"></msg-error>
+				</ion-item>
 
-        <ion-item class="marginlists">
-          <ion-label stacked>Género</ion-label>
-          <ion-select okText="Guardar" cancelText="Cancelar" formControlName="gender" name="userregistrogenero" interface="popover">
-            <ion-option value="f">Femenino</ion-option>
-            <ion-option value="m">Masculino</ion-option>
-          </ion-select>
-        </ion-item>
-
-        <ion-item class="marginlists">
-          <ion-label stacked>Email</ion-label>
-          <ion-input type="email" required name="userregistroemail" formControlName="mail"></ion-input>
-        </ion-item>
-        <ion-item class="marginlists">
-          <ion-label stacked>Confirmar email</ion-label>
-          <ion-input type="email" required name="confirmacionmail" formControlName="mail_conf"></ion-input>
-        </ion-item>
-
-
-
-        <ion-item>
-          <ion-label stacked>Contraseña</ion-label>
-          <ion-input type="{{type}}" name="contrasena"
-                     formControlName="password">
-          </ion-input>
-          <button *ngIf="!showPass" class="btn_show" ion-button clear color="dark" type="button" required item-right
-                  (click)="showPassword()">
-            <ion-icon name="ios-eye-off-outline"></ion-icon>
-          </button>
-          <button *ngIf="showPass" class="btn_show" ion-button clear color="dark" type="button" item-right (click)="showPassword()">
-            <ion-icon name="ios-eye-outline"></ion-icon>
-          </button>
-        </ion-item>
-
-        <ion-item class="marginlists">
-          <ion-label stacked>Confirmar contraseña</ion-label>
-          <ion-input type="{{type2}}" name="confirmacontrasena"
-                     formControlName="password_conf">
-          </ion-input>
-          <button *ngIf="!showPass2" class="btn_show2" ion-button clear color="dark" type="button" required item-right
-                  (click)="showPassword2()">
-            <ion-icon name="ios-eye-off-outline"></ion-icon>
-          </button>
-          <button *ngIf="showPass2" class="btn_show2" ion-button clear color="dark" type="button" item-right (click)="showPassword2()">
-            <ion-icon name="ios-eye-outline"></ion-icon>
-          </button>
-        </ion-item>
-
-        <ion-item no-lines *ngIf="formGroup.invalid">
-          <msg-error [control]="formGroup.controls.mail" name="Email"></msg-error>
-          <msg-error [control]="formGroup.controls.password" name="Contraseña"></msg-error>
-          <msg-error [control]="formGroup.controls.first_name" name="Nombres"></msg-error>
-          <msg-error [control]="formGroup.controls.last_name" name="Apellidos"></msg-error>
-
-        </ion-item>
-        <button class="buttonPayCash" ion-button small>Registrarse
-        </button>
-      </ion-list>
-    </form>
-
-  </div>
-
-  <ion-list>
-    <ion-col col-2>
-      <ion-checkbox [(ngModel)]="ischecked"></ion-checkbox>
-    </ion-col>
-    <ion-col col-10><span
-        (click)="politicas()"> Leí y acepto las políticas de uso  y privacidad de la información</span></ion-col>
-  </ion-list>
-  <div style="margin-top: 6%" class="center">
-    <button class="buttonPayCash" (click)="cancel()" ion-button small>Cancelar</button>
-
-  </div>
-
+				<ion-item class="marginlists">
+					<ion-label stacked>Confirmar contraseña</ion-label>
+					<ion-input type="{{type2}}" name="confirmacontrasena" formControlName="password_conf">
+					</ion-input>
+					<button *ngIf="!showPass2" class="btn_show2" ion-button clear color="dark" type="button" required item-right
+					 (click)="showPassword2()">
+						<ion-icon name="ios-eye-off-outline"></ion-icon>
+					</button>
+					<button *ngIf="showPass2" class="btn_show2" ion-button clear color="dark" type="button" item-right (click)="showPassword2()">
+						<ion-icon name="ios-eye-outline"></ion-icon>
+					</button>
+				</ion-item>
+				<div >
+					<button class="buttonPayCash" ion-button small>Registrarse</button>
+				</div>
+			</ion-list>
+		</form>
+	</div>
+	<ion-list>
+		<ion-col col-2>
+			<ion-checkbox [(ngModel)]="ischecked"></ion-checkbox>
+		</ion-col>
+		<ion-col col-10><span (click)="politicas()"> Leí y acepto las políticas de uso y privacidad de la información</span></ion-col>
+	</ion-list>
+	<div style="margin-top: 6%" class="center">
+		<button class="buttonPayCash" (click)="cancel()" ion-button small>Cancelar</button>
+	</div>
 </ion-content>
