--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,48 +1,30 @@
-<!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>profile</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-<ion-row>
-	<ion-col col-3 (click)="goPage('security')">
-		Seguridad
-	</ion-col>
-	<ion-col col-9 (click)="goPage('account')">
-		Mi perfil
-	</ion-col>
-</ion-row>
+<ion-content class="BackGRa" padding>
+	<div class="center">
+		<img class="logo" src="assets/imgs/EPCLogo.png" />
+	</div>
+	<div class="center mrg36Top">
+		<ion-row>
+			<ion-col (click)="goPage('account')" class="lineRight lineRight2 linerig" col-6 >
+				<img class="tamaIcos" src="assets/newIcons/13.png" />
+				<h6 class="colWhite">Mi cuenta</h6>
+			</ion-col>
+			<ion-col (click)="goPage('security')" class="lineRight2" col-6 >
+				<img class="tamaIcos" src="assets/newIcons/14.png" />
+				<h6 class="colWhite">Seguridad</h6>
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col (click)="goPage('TransactionPage')" class="lineRight" col-6>
+				<img class="tamaIcos" src="assets/newIcons/15.png" />
+				<h6 class="colWhite">Transacciones</h6>
+			</ion-col>
+			<ion-col (click)="goPage('history')" >
+				<img class="tamaIcos" src="assets/newIcons/16.png" />
+				<h6 class="colWhite">Historial</h6>
+			</ion-col>
+		</ion-row>
+		<ion-item class="center bacTransp">
+			<button class="buttonPayCash borderBtns" ion-button small>CONOCE MÁS</button>
+		</ion-item>
+	</div>
 </ion-content>
-<ion-footer>
-		<ion-toolbar>
-		  <ion-row>
-			<ion-col class="center" col-3 (click)="goPage('transaction')">
-			  <img width="25" height="25" src="assets/icon/1.png">
-			  <p>{{'TRANSACCION'|translate}}</p>
-			</ion-col>
-			<ion-col class="center" col-3 (click)="goPage('history')">
-			  <!-- <ion-badge item-end>{{count}}</ion-badge> -->
-			  <img width="25" height="25" src="assets/icon/2.png">
-			  <p>{{'HISTORIAL'|translate}}</p>
-			</ion-col>
-			<ion-col class="center" col-3 (click)="goPage('maps')">
-			  <img width="25" height="25" src="assets/icon/3.png">
-			  <p>{{'MAPA'|translate}}</p>
-			</ion-col>
-			<ion-col class="center" col-3 (click)="goPage('profile')">
-			  <img width="25" height="25" src="assets/icon/4.png">
-			  <p>{{'CUENTA'|translate}}</p>
-			</ion-col>
-		  </ion-row>
-		</ion-toolbar>
-	  </ion-footer>
