Create a provider to fingerprint and fix register to submit

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -67,7 +67,7 @@
 					</button>
 				</ion-item>
 				<div >
-					<button class="buttonPayCash" ion-button small>Registrarse</button>
+					<button class="buttonPayCash" ion-button small type="submit">Registrarse</button>
 				</div>
 			</ion-list>
 		</form>
